// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator IoT ProgressIndicator 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="iot--progress-indicator-new"
      data-testid="iot-progress-indicator-testid"
      onChange={[Function]}
    >
      <li
        className="step-complete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          style={
            Object {
              "minWidth": "6rem",
              "width": "6rem",
            }
          }
          type="button"
        >
          <div
            className="line-complete"
          />
          <div
            className="step-icon"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="10,15.9 4.7,10.6 3.6,11.6 8.9,16.9 10,18 20.6,7.4 19.5,6.3"
              />
            </svg>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="This is displayed when step icon is hovered"
            >
              First step
            </p>
            <p
              className="label-optional"
            >
              Optional label
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_4pmzbh8s9mk"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-complete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          style={
            Object {
              "minWidth": "6rem",
              "width": "6rem",
            }
          }
          type="button"
        >
          <div
            className="line-complete"
          />
          <div
            className="step-icon"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="10,15.9 4.7,10.6 3.6,11.6 8.9,16.9 10,18 20.6,7.4 19.5,6.3"
              />
            </svg>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Second Step"
            >
              Second Step
            </p>
            <p
              className="label-optional"
            >
              Optional label
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_cbm3r3l81o6"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-complete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          style={
            Object {
              "minWidth": "6rem",
              "width": "6rem",
            }
          }
          type="button"
        >
          <div
            className="line-sub-complete"
          />
          <div
            className="step-icon-sub"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="10,15.9 4.7,10.6 3.6,11.6 8.9,16.9 10,18 20.6,7.4 19.5,6.3"
              />
            </svg>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Sub Step 1"
            >
              Sub Step 1
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_ms4f67wm0q"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-current"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          style={
            Object {
              "minWidth": "6rem",
              "width": "6rem",
            }
          }
          type="button"
        >
          <div
            className="line-sub"
          />
          <div
            className="step-icon-sub"
          />
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Sub Step 2"
            >
              Sub Step 2
            </p>
            <p
              className="label-optional"
            >
              Optional label
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_5b4gmktgdep"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-incomplete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          style={
            Object {
              "minWidth": "6rem",
              "width": "6rem",
            }
          }
          type="button"
        >
          <div
            className="line-sub"
          />
          <div
            className="step-icon-sub"
          />
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Sub Step 3"
            >
              Sub Step 3
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_o3iok2580rc"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-disabled"
      >
        <button
          aria-disabled={true}
          className="step-button"
          disabled={true}
          onClick={null}
          onKeyDown={null}
          style={
            Object {
              "minWidth": "6rem",
              "width": "6rem",
            }
          }
          type="button"
        >
          <div
            className="line"
          />
          <div
            className="step-icon"
          >
            <p>
              3
            </p>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Third Step"
            >
              Third Step
            </p>
            <p
              className="label-optional"
            >
              Optional label
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_gecsy9str7q"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-invalid"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          style={
            Object {
              "minWidth": "6rem",
              "width": "6rem",
            }
          }
          type="button"
        >
          <div
            className="line"
          />
          <div
            className="step-icon"
          >
            <p>
              !
            </p>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Fourth Step"
            >
              Fourth Step
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_iro3cxmp3e"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-incomplete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          style={
            Object {
              "minWidth": "6rem",
              "width": "6rem",
            }
          }
          type="button"
        >
          <div
            className="step-icon"
          >
            <p>
              5
            </p>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Fifth Step"
            >
              Fifth Step
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_0zwbynnfm64"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator IoT ProgressIndicator Vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="iot--progress-indicator-new vertical"
      data-testid="iot-progress-indicator-testid"
      onChange={[Function]}
    >
      <li
        className="step-complete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          type="button"
        >
          <div
            className="line-complete"
          />
          <div
            className="step-icon"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="10,15.9 4.7,10.6 3.6,11.6 8.9,16.9 10,18 20.6,7.4 19.5,6.3"
              />
            </svg>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="This is displayed when step icon is hovered"
            >
              First step
            </p>
            <p
              className="label-optional"
            >
              Optional label
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_yeeu0b52tu"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-complete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          type="button"
        >
          <div
            className="line-complete"
          />
          <div
            className="step-icon"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="10,15.9 4.7,10.6 3.6,11.6 8.9,16.9 10,18 20.6,7.4 19.5,6.3"
              />
            </svg>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Second Step"
            >
              Second Step
            </p>
            <p
              className="label-optional"
            >
              Optional label
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_hsnm986hkzs"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-complete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          type="button"
        >
          <div
            className="line-sub-complete"
          />
          <div
            className="step-icon-sub"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="10,15.9 4.7,10.6 3.6,11.6 8.9,16.9 10,18 20.6,7.4 19.5,6.3"
              />
            </svg>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Sub Step 1"
            >
              Sub Step 1
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_djx00ck51y9"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-current"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          type="button"
        >
          <div
            className="line-sub"
          />
          <div
            className="step-icon-sub"
          />
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Sub Step 2"
            >
              Sub Step 2
            </p>
            <p
              className="label-optional"
            >
              Optional label
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_pwnzboxjpj"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-incomplete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          type="button"
        >
          <div
            className="line-sub"
          />
          <div
            className="step-icon-sub"
          />
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Sub Step 3"
            >
              Sub Step 3
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_g5n5wx2shdu"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-disabled"
      >
        <button
          aria-disabled={true}
          className="step-button"
          disabled={true}
          onClick={null}
          onKeyDown={null}
          type="button"
        >
          <div
            className="line"
          />
          <div
            className="step-icon"
          >
            <p>
              3
            </p>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Third Step"
            >
              Third Step
            </p>
            <p
              className="label-optional"
            >
              Optional label
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_5qpwfh9i3av"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-invalid"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          type="button"
        >
          <div
            className="line"
          />
          <div
            className="step-icon"
          >
            <p>
              !
            </p>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Fourth Step"
            >
              Fourth Step
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_ermret4bgnn"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
      <li
        className="step-incomplete"
      >
        <button
          aria-disabled={false}
          className="step-button"
          disabled={false}
          onClick={null}
          onKeyDown={null}
          type="button"
        >
          <div
            className="step-icon"
          >
            <p>
              5
            </p>
          </div>
          <div
            className="label-container"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <p
              className="label"
              value="Fifth Step"
            >
              Fifth Step
            </p>
          </div>
          <div
            aria-describedby={null}
            aria-expanded={false}
            className="bx--tooltip__label"
            id="__carbon-tooltip-trigger_ygh707yhj7j"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="button"
            tabIndex={0}
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator Stateful 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress iot--progress-indicator ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 egbeyA"
      onChange={[Function]}
    >
      <li
        className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button bx--progress-step-button--unclickable"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="bx--assistive-text"
          >
            Current
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="16"
              r="10"
            />
            <path
              d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
            />
            <title>
              This is displayed when step icon is hovered
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            First step
          </p>
          <p
            className="bx--progress-optional"
          >
            Optional label
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Second Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Second Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Third Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Third Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fourth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fourth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fifth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fifth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Sixth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Sixth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator hideLabels and default stepWidth 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress iot--progress-indicator ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 egbeyA"
      onChange={[Function]}
    >
      <li
        className="bx--progress-step bx--progress-step--complete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 iunSsU"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Complete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <polygon
              points="14 21.5 9 16.54 10.59 14.97 14 18.35 21.41 11 23 12.58 14 21.5"
            />
            <title>
              This is displayed when step icon is hovered
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            First step
          </p>
          <p
            className="bx--progress-optional"
          >
            Optional label
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 gyomnR"
      >
        <button
          className="bx--progress-step-button bx--progress-step-button--unclickable"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="bx--assistive-text"
          >
            Current
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="16"
              r="10"
            />
            <path
              d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
            />
            <title>
              Second Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Second Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 iunSsU"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Third Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Third Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 iunSsU"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fourth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fourth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 iunSsU"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fifth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fifth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 iunSsU"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Sixth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Sixth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator presentation 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress iot--progress-indicator ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 egbeyA"
      onChange={[Function]}
    >
      <li
        className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button bx--progress-step-button--unclickable"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="bx--assistive-text"
          >
            Current
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="16"
              r="10"
            />
            <path
              d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
            />
            <title>
              This is displayed when step icon is hovered
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            First step
          </p>
          <p
            className="bx--progress-optional"
          >
            Optional label
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Second Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Second Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Third Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Third Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fourth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fourth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fifth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fifth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 fHtWSy"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Sixth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Sixth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator presentation vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress bx--progress--vertical iot--progress-indicator ProgressIndicator__StyledProgressIndicator-sc-1sy51cd-0 fvWusc"
      onChange={[Function]}
    >
      <li
        className="bx--progress-step bx--progress-step--current ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 hRXwzO"
      >
        <button
          className="bx--progress-step-button bx--progress-step-button--unclickable"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="bx--assistive-text"
          >
            Current
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="16"
              cy="16"
              r="10"
            />
            <path
              d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
            />
            <title>
              This is displayed when step icon is hovered
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            First step
          </p>
          <p
            className="bx--progress-optional"
          >
            Optional label
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 hRXwzO"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Second Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Second Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 hRXwzO"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Third Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Third Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 hRXwzO"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fourth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fourth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 hRXwzO"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Fifth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Fifth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete ProgressIndicator__StyledProgressStep-sc-1sy51cd-1 hRXwzO"
      >
        <button
          className="bx--progress-step-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="bx--assistive-text"
          >
            Incomplete
          </span>
          <svg
            aria-hidden={true}
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
            />
            <title>
              Sixth Step
            </title>
          </svg>
          <p
            className="bx--progress-label"
          >
            Sixth Step
          </p>
          <span
            className="bx--progress-line"
          />
        </button>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ProgressIndicator skeleton 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="bx--progress bx--skeleton"
    >
      <li
        className="bx--progress-step bx--progress-step--incomplete"
      >
        <div
          className="bx--progress-step-button bx--progress-step-button--unclickable"
        >
          <svg>
            <path
              d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
            />
          </svg>
          <p
            className="bx--progress-label"
          />
          <span
            className="bx--progress-line"
          />
        </div>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete"
      >
        <div
          className="bx--progress-step-button bx--progress-step-button--unclickable"
        >
          <svg>
            <path
              d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
            />
          </svg>
          <p
            className="bx--progress-label"
          />
          <span
            className="bx--progress-line"
          />
        </div>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete"
      >
        <div
          className="bx--progress-step-button bx--progress-step-button--unclickable"
        >
          <svg>
            <path
              d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
            />
          </svg>
          <p
            className="bx--progress-label"
          />
          <span
            className="bx--progress-line"
          />
        </div>
      </li>
      <li
        className="bx--progress-step bx--progress-step--incomplete"
      >
        <div
          className="bx--progress-step-button bx--progress-step-button--unclickable"
        >
          <svg>
            <path
              d="M 7, 7 m -7, 0 a 7,7 0 1,0 14,0 a 7,7 0 1,0 -14,0"
            />
          </svg>
          <p
            className="bx--progress-label"
          />
          <span
            className="bx--progress-line"
          />
        </div>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
